#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* ifsmirnov: TChunkView introduced. Update masters via snapshot.
* renadeen: Operation snapshot version has changed, operations will be restarted
* max42: ============================ ALL ENTRIES SHOULD BE IN ENGLISH ABOVE THIS LINE ==============================
* shakurov: Multiplied TUser::ReadRequestRateLimit_ by the number of followers. Update masters via snapshot.
* savrus: Изменилась валидация прав при создании таблиц с несколькими таблетами. Обновлять через снепшот.
* ermolovd: Изменилась валидация схем таблиц (коммит 7ebee26d7b7). Обновлять через снепшот.
* ifsmirnov: Tablet cell bundle destruction semantics changed. Update masters with snapshot.
* babenko: Some master config settings were made dynamic and moved to //sys/@config; check master logs for unrecogznied options after upgrade and migrate them to //sys/@config
* babenko: Security tags
* shakurov: Изменилась логика проверки прав в мутации создания кипарисных узлов. Обновлять через снепшот.
* babenko: Добавлены поколоночные ACL, обновлять мастера через снепшот.
* babenko: Еще одно исправление в проверке прав создания реплик, обновлять мастера через снепшот.
* babenko: Исправлена проверка прав создания реплик, обновлять мастера через снепшот.
* shakurov: В коммите 796a8f8988 изменилась семантика одной из мутаций, обновлять мастера через снапшот.
* levysotsky: Добавлено новое право manage, мастеров обновлять перед шедулерами и контроллер агентами.
* savrus: Вычищены dynamic tables attributes из статических таблиц, обновлять мастеров через снапшот.
* shakurov: Восстановлена совместимость "новый мастер - старая нода", сломанная коммитом 3933bd84f9.