@@ -149,7 +149,7 @@ public:
 
     void SetAccessed(TCypressNodeBase* trunkNode);
 
-    void SetExpirationTime(TCypressNodeBase* trunkNode, std::optional<TInstant> time);
+    void SetExpirationTime(TCypressNodeBase* node, std::optional<TInstant> time);
 
     typedef SmallVector<TCypressNodeBase*, 1> TSubtreeNodes;
     TSubtreeNodes ListSubtreeNodes(
